--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,27 +1,40 @@
-<div class="home_favorites">
+<div class="row user_section">
   <% if user_signed_in? %>
-    <h1><%= current_user.first_name %> <%= current_user.last_name %>'s Favorites</h1>
-    <h6><a href="<%= favorites_url %>">Add / Edit Favorites</a></h6>
-    <% favorites = Favorite.where(user_id: current_user.id).all; if favorites.length > 0 %>
-    <% Favorite.where(user_id: current_user.id).all.each do |favorite| %>
-    <div class="row">
-      <div class="col-xs-12">
-        <% if favorite.teamID != "" %>
-        <% team = Team.where(id: favorite.teamID).first %>
-        <a href="/teams/<%= team.id %>"><%= team.team_name %></a>
-        <% else %>
-        <% player = Player.where(id: favorite.playerID).first %>
-        <a href="/players/<%= player.id %>"><%= player.ign %></a>
+    <h1>Hello, <%= current_user.first_name %> <%= current_user.last_name %></h1>
+    <div class="col-xs-6 home_favorites">
+      <h6><a href="<%= favorites_url %>">Add / Edit Favorites</a></h6>
+      <% favorites = Favorite.where(user_id: current_user.id).all %>
+      <% if favorites.length > 0 %>
+        <div class="list-group">
+        <% favorites.each do |favorite| %>
+          <% if favorite.teamID != "" %>
+            <!-- this is a team -->
+            <% team = Team.where(id: favorite.teamID).first %>
+            <% if team != nil %>
+              <a class="list-group-item" href="/teams/<%= team.id %>">
+                <h4 class="list-group-item-heading"><%= team.team_name %></h4>
+                <p class="list-group-item-text">Team</p>
+              </a>
+              <% end %>
+          <% else %>
+            <!-- this is a player -->
+            <% player = Player.where(id: favorite.playerID).first %>
+            <% if player != nil %>
+              <a class="list-group-item" href="/players/<%= player.id %>">
+                <h4 class="list-group-item-heading"><%= player.ign %></h4>
+                <p class="list-group-item-text">Player</p>
+              </a>
+            <% end %>
+          <% end %>
         <% end %>
-      </div>
+        </div>
+      <% else %>
+        <p>You have not set any favorites yet!</p>
+      <% end %>
     </div>
-    <% end %>
-    <% else %>
-      <p>User has no favorites. Click <a href="/favorites">here</a> to add favorites!</p>
-    <% end %>
-    <br>
-     <a href="/users/<%= current_user.id %>/edit"> Edit Profile
-
+    <div class="col-xs-6">
+      <a href="/users/<%= current_user.id %>/edit"> Edit Profile
+    </div>
   <% end %>
 </div>
 
