--- a/app/views/matches/schedule.html.erb
+++ b/app/views/matches/schedule.html.erb
@@ -242,7 +242,7 @@
                   </a>
                 <div style="text-align:right">
                   <a href="/matches/<%= match.id %>">
-                    <small><%= match.match_date_time.strftime(" @ %H:%M") %></small>
+                    <small><%= match.match_date_time.strftime(" ~ %H:%M") %></small>
                   </a>
                 </div>
               <% end %>
