--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -40,8 +40,13 @@
     <div class="list-group">
       <b>Kills:</b> <%= team_stats.sum("kills") %><br>
       <b>Deaths:</b> <%= team_stats.sum("deaths") %><br>
+      <% if team_stats.count > 0 %>
       <b>Wins:</b> <%= team_stats.sum("wins")/team_stats.count %><br>
       <b>Losses:</b> <%= team_stats.sum("losses")/team_stats.count %><br>
+      <b>Games Played:</b> <%= team_stats.sum("games_played")/team_stats.count %><br>
+      <% else %>
+      <b>Games Played:</b>  0 <br>
+      <% end %>
     </div>
 </div>
 </div>
