seeds fix and schedule page fix

--- a/app/views/matches/schedule.html.erb
+++ b/app/views/matches/schedule.html.erb
@@ -6,11 +6,10 @@
 
 
 
-<!-- DECEMBER 25 MATCHES -->
 <!-- League of Legends -->
 <% league=League.first%>
 <div style="text-align:center">
-    <h3><font face="sans-serif"> Today, 25th of December </front></h3> <br>
+    <h3><font face="sans-serif"> <b>Today:</b> <%= DateTime.now.strftime("%A, %B %-d, %Y") %> </front></h3> <br>
 </div>
       <div class="container">
           <div class="row">
@@ -150,7 +149,6 @@
 <!-- League of legends -->
 <% league=League.first%>
 <div style="text-align:center">
-<h3><font face="sans-serif">  27th of December </front></h3> <br>
 </div>
 <div class="container">
     <div class="row">
