--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -36,7 +36,10 @@
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
-
+<div class="field">
+    <%= f.label :team_id %>
+    <%= f.text_field :team_id, value: params[:team_id], :readonly => true %>
+  </div>
 
 
   <div class="actions">
