fonts color fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,7 +81,7 @@ div {
   padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
-  background-color: #f0f0f0;
+  background-color: black;
 
   h2 {
     text-align: left;
@@ -112,7 +112,7 @@ label {
 #search-input {
   background-color: gray;
   color: darkgray;
-  width:300px;
+  width:150px;
 }
 
 #search-button {
