--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -6,7 +6,7 @@ body {
 
 .nav ul {
   list-style: none;
-  background-color: #444;
+  background-color: #00000;
   text-align: center;
   padding: 0;
   margin: 0;
@@ -15,24 +15,25 @@ body {
   font-family: 'Oswald', sans-serif;
   font-size: 1.2em;
   line-height: 40px;
+  color: white;
   height: 40px;
   border-bottom: 1px solid #888;
 }
 
 .nav a {
-  text-decoration: none;
-  color: #fff;
+  text-decoration: #B4A173;
+  color: #B4A173;
   display: block;
   transition: .3s background-color;
 }
 
 .nav a:hover {
-  background-color: #005f5f;
+  background-color: none;
 }
 
 .nav a.active {
   background-color: #fff;
-  color: #444;
+  color: white;
   cursor: default;
 }
 
