--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,8 +10,10 @@
 			<a href="#"><i class="fa fa-youtube"></i></a>
   	</div>
 
-	<footer class="footer-logo">
+
+			<footer class="footer-logo">
 			<div class="footer-sponsor">
+				<div class = "row">
 				<img src="/assets/sponsor_3.png" style="width: 5%; height: 5%"/>
 				<s class="padding-right"><img src="/assets/sponsor_2.png" style="width: 5%; height: 5%"/></s>
 				<s class="padding-right"><img src="/assets/sponsor_6.png" style="width: 5%; height: 5%"/></s>
@@ -20,7 +22,9 @@
 				<s class="padding-right"><img src="/assets/sponsor_1.png" style="width: 5%; height: 5%"/></s>
 				<s class="padding-right"><img src="/assets/sponsor_7.png" style="width: 4%; height: 4%"/></s>
 			</div>
+			</div>
 	</footer>
+
 	<hr>
  <div class="footer-left">
   		<p class="footer-links">
