--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,35 +11,32 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
-  </div>
 
-  <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
+    <div class="field_name"><%= f.label :first_name %></div>
+    <div class="field"><%= f.text_field :first_name %></div>
 
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
 
-  <div class="field">
-    <%= f.label :phone_number %>
-    <%= f.text_field :phone_number %>
-  </div>
+    <div class="field_name"><%= f.label :last_name %></div>
+    <div class="field"><%= f.text_field :last_name %></div>
 
 
 
-  <div class="field">
-    <%= f.label :region %>
-    <%= f.text_field :region %>
-  </div>
+    <div class="field_name"><%= f.label :email %></div>
+    <div class="field"><%= f.text_field :email %></div>
 
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="field_name"><%= f.label :phone_number %></div>
+    <div class="field"><%= f.text_field :phone_number %></div>
+
+
+
+
+      <div class="field_name"><%= f.label :region %></div>
+      <div class="field"><%= f.text_field :region %></div>
+
+
+
+      <div class="actions">
+    <div class="field"><%= f.submit %></div>
+    </div>
 <% end %>
