--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,11 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Results</h1>
-<% @matches.all.each do |match| %>
+<!--<% matches = @matches.all%> -->
+<% matches = @matches.where("match_date_time <= ?", DateTime.now).order("match_date_time DESC").each do |match| %>
 <div class="col-xs-6 col-md-4">
   <div class="list-group">
     <a href = '/matches/<%=match.id%>' class="list-group-item">
-      <b><%= match.match_date_time.to_date %></b>
+      <b><%= match.match_date_time.strftime("%m-%d-%Y @ %H:%M") %></b>
       <table>
         <tbody>
         <tr>
