Fix footer sponsor logos and Gemfine.lock

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,30 +3,23 @@
 </head>
 <body>
   <footer class="footer-distributed">
-  	<div class="footer-right">
+  	<div class="footer-social">
 			<a href="#"><i class="fa fa-facebook"></i></a>
 			<a href="#"><i class="fa fa-twitter"></i></a>
 			<a href="#"><i class="fa fa-twitch"></i></a>
 			<a href="#"><i class="fa fa-youtube"></i></a>
   	</div>
-
-
-			<footer class="footer-logo">
-			<div class="footer-sponsor">
-				<div class = "row">
-				<img src="/assets/sponsor_3.png" style="width: 5%; height: 5%"/>
-				<s class="padding-right"><img src="/assets/sponsor_2.png" style="width: 5%; height: 5%"/></s>
-				<s class="padding-right"><img src="/assets/sponsor_6.png" style="width: 5%; height: 5%"/></s>
-				<s class="padding-right"><img src="/assets/sponsor_4.png" style="width: 5%; height: 5%"/></s>
-				<s class="padding-right"><img src="/assets/sponsor_5.png" style="width: 5%; height: 5%"/></s>
-				<s class="padding-right"><img src="/assets/sponsor_1.png" style="width: 5%; height: 5%"/></s>
-				<s class="padding-right"><img src="/assets/sponsor_7.png" style="width: 4%; height: 4%"/></s>
-			</div>
-			</div>
-	</footer>
-
-	<hr>
- <div class="footer-left">
+		<div class="row footer-logo-div">
+			<img src="/assets/sponsor_3.png" class="footer-sponsor"/>
+			<img src="/assets/sponsor_2.png" class="footer-sponsor"/>
+			<img src="/assets/sponsor_6.png" class="footer-sponsor"/>
+			<img src="/assets/sponsor_4.png" class="footer-sponsor"/>
+			<img src="/assets/sponsor_5.png" class="footer-sponsor"/>
+			<img src="/assets/sponsor_1.png" class="footer-sponsor"/>
+			<img src="/assets/sponsor_7.png" class="footer-sponsor"/>
+		</div>
+		<hr>
+ 		<div class="footer-left">
   		<p class="footer-links">
   			<a href="/">eSports</a>
 				<s class="padding-right"><a href="/leagues">Leagues</a></s>
@@ -34,13 +27,11 @@
 				<s class="padding-right"><a href="/contact">Contact</a></s>
   		</p>
       <br>
-      	<div>
-  			<h6>eSports &copy; 2016</h6>
-  			<h6>Main Event - G Play Civic Center</h6>
+      <div>
+				<h6>eSports &copy; 2016</h6>
+				<h6>Main Event - G Play Civic Center</h6>
 				<h6>Dec 25 - 30, 2016</h6>
-		</div>
-
 			</div>
-
+		</div>
   </footer>
 </body>
