--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,6 @@
   color:black
 }
 
-
 .field_name{
   color: white
 }
@@ -283,19 +282,18 @@ div.upcoming_matches {
 	color:  inherit;
 }
 
-.footer-distributed .footer-right{
-	float: right;
-	margin-top: 0px;
+.footer-distributed .footer-social{
+	//float: right;
+  margin: auto;
 	max-width: 180px;
 }
 
-.footer-distributed .footer-right a{
+.footer-distributed .footer-social a{
 	display: inline-block;
 	width: 35px;
 	height: 35px;
 	background-color:  #186CA0;
 	border-radius: 5px;
-
 	font-size: 20px;
 	color: #FFFFFF;
 	text-align: center;
@@ -319,6 +317,13 @@ s {
 }
 .footer-logo .footer-sponsor s{
   padding-right: 1%;
+}
+.footer-logo-div {
+  display: inline-block;
+  margin: auto;
+}
+.footer-sponsor {
+  width: 13%;
 }
 
 /* If you don't want the footer to be responsive, remove these media queries */
