--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -20,8 +20,15 @@
           <% else %>
           <%= link_to "Register", new_user_session_path, class: "btn btn-primary"%>
           <% end %>
+          <% if user_signed_in? and current_user.has_any_role? :admin %>
+          <%= link_to "Edit", edit_league_path(league.id), class: "btn btn-primary"%>
+          <%= link_to "Delete",league_path(league.id), method: :delete, data: {confirm: 'Are you sure?'} %>
+        <% end %>
         </h4>
       </div>
     </div>
   <% end %>
+  <% if user_signed_in? and current_user.has_any_role? :admin %>
+  <%= link_to "Add New Leagues", new_league_path, class: "btn btn-primary"%>
+<% end %>
 </center>
