--- a/app/views/matches/schedule.html.erb
+++ b/app/views/matches/schedule.html.erb
@@ -1,42 +1,38 @@
-<!DOCTYPE html>
-<html>
-  <h2><font face="tahoma"> eSports 2016 Schedule </front></h2>
-  <hr>
-  <%n=4; dateTimeToday = (DateTime.now.to_time - n.hours).to_datetime %>
-  <% startDate = Match.where("match_date_time > ?", dateTimeToday).order("match_date_time ASC").first.match_date_time.to_datetime %>
-  <% endDate = Match.where("match_date_time > ?", dateTimeToday).order("match_date_time ASC").last.match_date_time.to_datetime %>
-  <% (startDate..endDate).each do |day| %>
-    <% matches = Match.where("match_date_time BETWEEN ? AND ? ", day.beginning_of_day, day.end_of_day) %>
-    <% if matches.count > 0 %>
-      <h1><%= day.strftime("%A, %B %-d, %Y") %></h1>
-      <% @leagues.each do |league|%>
+<h2><font face="tahoma"> eSports 2016 Schedule </front></h2>
+<hr>
+<%n=4; dateTimeToday = (DateTime.now.to_time - n.hours).to_datetime %>
+<% startDate = Match.where("match_date_time > ?", dateTimeToday).order("match_date_time ASC").first.match_date_time.to_datetime %>
+<% endDate = Match.where("match_date_time > ?", dateTimeToday).order("match_date_time ASC").last.match_date_time.to_datetime %>
+<% (startDate..endDate).each do |day| %>
+  <% matches = Match.where("match_date_time BETWEEN ? AND ? ", day.beginning_of_day, day.end_of_day) %>
+  <% if matches.count > 0 %>
+    <h1><%= day.strftime("%A, %B %-d, %Y") %></h1>
+    <% @leagues.each do |league|%>
     <div class="container">
-        <div class="row">
-         <div class="col-md-12">
-         <% match = matches.where(league_id: league.id).order('match_date_time ASC').first; if match != nil %>
-           <h4><font face="sans-serif" color="#B4A173"><a href="/leagues/<%=league.id%>">  <%= league.league_name %> </a></font></h4>
-             <br>
-             <% matches.where(league_id: league.id).order('match_date_time ASC').each do |match|%>
-             <% team1 = Team.find(match.team1ID); team2 = Team.find(match.team2ID); %>
-                      <a href="/teams/<%= team1.id %>">
-                          <img class="upcoming_matches_team_logo" src="/assets/team_<%= team1.id %>"/>
-                      vs.
-                      <a href="/teams/<%= team2.id %>">
-                          <img class="upcoming_matches_team_logo" src="/assets/team_<%= team2.id %>"/>
-                      </a>
-                    <div style="text-align:right">
-                      <a href="/matches/<%= match.id %>">
-                        <small><%= match.match_date_time.strftime(" @ %H:%M") %></small>
-                      </a>
-                    </div>
-             <% end %>
-           <% end %>
-        </div>
+      <div class="row">
+        <% match = matches.where(league_id: league.id).order('match_date_time ASC').first; if match != nil %>
+          <h4><font face="sans-serif" color="#B4A173"><a href="/leagues/<%=league.id%>">  <%= league.league_name %> </a></font></h4>
+          <br>
+          <% matches.where(league_id: league.id).order('match_date_time ASC').each do |match|%>
+          <% team1 = Team.find(match.team1ID); team2 = Team.find(match.team2ID); %>
+          <div class="col-xs-12 col-sm-6" style="text-align:center;">
+            <a href="/teams/<%= team1.id %>">
+              <img class="upcoming_matches_team_logo" src="/assets/team_<%= team1.id %>"/>
+            </a>
+            vs.
+            <a href="/teams/<%= team2.id %>">
+              <img class="upcoming_matches_team_logo" src="/assets/team_<%= team2.id %>"/>
+            </a>
+            <div style="text-align:center;">
+              <a href="/matches/<%= match.id %>">
+                <small><%= match.match_date_time.strftime("@ %H:%M") %></small>
+              </a>
+            </div>
+          </div>
+          <% end %>
+        <% end %>
       </div>
     </div>
-
-        <% end %>
     <% end %>
   <% end %>
-
-</html>
+<% end %>
