--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,15 +2,13 @@
 
 <h1>Users</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>First name</th>
       <th>Last name</th>
       <th>Email</th>
       <th>Phone number</th>
-   
- 
       <th>Region</th>
       <th>Player</th>
       <th colspan="3"></th>
@@ -24,10 +22,8 @@
         <td><%= user.last_name %></td>
         <td><%= user.email %></td>
         <td><%= user.phone_number %></td>
-    
-      
         <td><%= user.region %></td>
-        <td><%= user.player %></td>
+        <td><%= user.player%></td>
         <td><%= link_to 'Show', users_path %></td>
       </tr>
     <% end %>
