--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,44 +1,32 @@
 <h1>Favorites</h1>
 <% if user_signed_in? %>
+  <ul class="list-group">
   <% Favorite.where(user_id: current_user.id).each do |favorite| %>
-    <div class="row">
     <% if favorite.teamID != "" %>
-      <% team = Team.where(id: favorite.teamID).first %>
-      <div class="col-xs-4">
-        <a href="/teams/<%= team.id %>"><%= team.team_name %></a>
-      </div>
-      <div class="col-xs-4">
-        <%= link_to 'Edit', edit_favorite_path(favorite) %>
-      </div>
-      <div class="col-xs-4">
-        <%= link_to 'Delete', favorite, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </div>
+    <% team = Team.where(id: favorite.teamID).first %>
+      <li class="list-group-item">
+        <h3 class="list-group-item-heading"><a href="/teams/<%= team.id %>"><%= team.team_name %></a></h3>
+        <p class="list-group-item-text"><%= link_to 'Delete', favorite, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      </li>
     <% else %>
       <% if favorite.playerID != "" %>
       <% player = Player.where(id: favorite.playerID).first %>
-      <div class="col-xs-4">
-        <a href="/players/<%= player.id %>"><%= player.ign %></a>
-      </div>
-      <div class="col-xs-4">
-        <%= link_to 'Edit', edit_favorite_path(favorite) %>
-      </div>
-      <div class="col-xs-4">
-        <%= link_to 'Delete', favorite, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </div>
+      <li class="list-group-item">
+        <h3 class="list-group-item-heading"><a href="/players/<%= player.id %>"><%= player.ign %></a></h3>
+        <p class="list-group-item-text"><%= link_to 'Delete', favorite, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      </li>
       <% else %>
-      <p>Invalid favorite object. Team ID and Player ID are set</p>
+        <p>Invalid favorite object. Both Team ID and Player ID are set</p>
       <% end %>
     <% end %>
-  </div> <!-- div.row -->
   <% end %>
+  </ul>
 
   <div class="row">
-    <div class="col-xs-4 col-xs-offset-4">
+    <div class="col-xs-4" style="font-size:20px;">
       <%= link_to 'New Favorite', new_favorite_path %>
     </div>
   </div>
-
-  <p id="notice"><%= notice %></p>
 
 <% else %>
   <p>Please sign in to add and edit favorites</p>
