--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -29,7 +29,7 @@
         <p class="no-players">No players on this team</p>
       <% end %>
       <% if user_signed_in? %>
-        <% if @team.coachID == String(current_user.id)%>
+        <% if current_user.has_role? :admin || @team.coachID == String(current_user.id) %>
         <%= link_to "Add Player", new_team_player_path(@team.id) %>
         <% end %>
       <% end %>
