--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -43,7 +43,7 @@
 </div>
 
 <!-- Upcoming Mathces -->
-<h1>Upcoming Matches</h1>
+<h1>Matches</h1>
 <hr>
 <% League.all.each do |league| %>
 <div class="row" style="border:1px solid lightgray">
