team field fixed

--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -38,7 +38,7 @@
   </div>
 <div class="field">
     <%= f.label :team_id %>
-    <%= f.text_field :team_id, :readonly => true %>
+    <%= f.text_field :team_id, value: params[:team_id],:readonly => true %>
   </div>
 
 
