--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,19 +10,18 @@
 			<a href="#"><i class="fa fa-youtube"></i></a>
   	</div>
 
-	<footer class="footer-logo">
-
-					<div class = "row">
-						<div class="col-lg-12 col-md-12">
-							<div class="col-md-2"><img src="/assets/sponsor_3.png" style="width: 60%; height: 60%"/></div>
-							<div class="col-md-1"><img src="/assets/sponsor_2.png" style="width: 60%; height: 60%"/></div>
-							<div class="col-md-2"><img src="/assets/sponsor_6.png" style="width: 60%; height: 60%"/></div>
-							<div class="col-md-1"><img src="/assets/sponsor_4.png" style="width: 60%; height: 60%"/></div>
-							<div class="col-md-2"><img src="/assets/sponsor_5.png" style="width: 60%; height: 60%"/></div>
-							<div class="col-md-1"><img src="/assets/sponsor_1.png" style="width: 60%; height: 60%"/></div>
-							<div class="col-md-2"><img src="/assets/sponsor_7.png" style="width: 60%; height: 60%"/></div>
-						</div>
-					</div
+			<footer class="footer-logo">
+			<div class="footer-sponsor">
+				<div class = "row">
+				<img src="/assets/sponsor_3.png" style="width: 20%; height: 2%"/>
+				<s class="padding-right"><img src="/assets/sponsor_2.png" style="width: 20%; height: 20%"/></s>
+				<s class="padding-right"><img src="/assets/sponsor_6.png" style="width: 20%; height: 20%"/></s>
+				<s class="padding-right"><img src="/assets/sponsor_4.png" style="width: 20%; height: 20%"/></s>
+				<s class="padding-right"><img src="/assets/sponsor_5.png" style="width: 5%; height: 5%"/></s>
+				<s class="padding-right"><img src="/assets/sponsor_1.png" style="width: 5%; height: 5%"/></s>
+				<s class="padding-right"><img src="/assets/sponsor_7.png" style="width: 4%; height: 4%"/></s>
+			</div>
+			</div>
 	</footer>
 
 	<hr>
