changed Team and player correction

--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', player: @player %>
 
-<%= link_to 'Show', player_path(@player.id) %> |
-<%= link_to 'Back', player_path(@player.id) %>
+<%= link_to 'Show', team_player_path(@player.id) %> |
+<%= link_to 'Back', team_player_path(@player.id) %>
